tests/paczka1/small_fuzzy/12318237.err
Error in line 6: A836 A836 58,0
Error in line 5: L7KtPU A836 77,3
Error in line 12: Tx0aBiivFE A865 9,9
